@@ -1,5 +1,9 @@
 2007-01-03  Sven Neumann  <sven@gimp.org>
 
+	* libgimpconfig/gimpcolorconfig.c: fixed blurb.
+
+2007-01-03  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/imagemap/imap_about.c: make the About dialog transient
 	to the main window and close it when the Close button is pressed.
 
